// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show the component mounted correctly 1`] = `
<img
  alt="Coffee Mug"
  className="productImg undefined"
  src="http://hello.jpg"
/>
`;

exports[`ProductImage should show the component with the product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffee Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
